# doc-classifier-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  API_ARCHITECTURE.md  ARCH.md  COLLABORATION.md  DECISIONS.md  EXCEPTION_HANDLING.md  FINAL_DEMO_PREP.md  LICENSES.md  QUICK_START.md  RBAC.md  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
agent_context/: README.md  ali.md  aya.md  jad.md  mohamad.md
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: app.py  exceptions.py  main.py
app/api/: main.py  schemas.py
app/auth/: __init__.py  casbin.py  jwt.py  users.py
app/core/: config.py  constants.py  exceptions.py  logging.py  security.py  startup.py
app/db/: models.py  session.py
app/domain/: audit.py  batch.py  document.py  prediction.py  user.py
app/repositories/: audit_repository.py  batch_repository.py  document_repository.py  prediction_repository.py  user_repository.py
app/services/: audit_service.py  batch_service.py  cache_service.py  ingest_service.py  prediction_service.py  role_service.py  user_service.py
app/workers/: inference_worker.py  sftp_ingest_worker.py
docker/: api.Dockerfile  ingest.Dockerfile  worker.Dockerfile
docker/docker/: api.Dockerfile  worker.Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.js
jawad/: OVERVIEW.md  mohamad_tasks.md  task10_domain_document.md  task11_domain_prediction.md  task12_domain_audit.md  task13_repo_user.md  task14_repo_batch.md  task15_repo_document.md  task16_repo_prediction.md  task17_repo_audit.md  task18_service_audit.md  task19_service_cache.md  task1_base.md  task20_service_batch.md  task21_service_prediction.md  task22_service_user.md  task23_tests.md  task2_constants.md  task3_exceptions.md  task4_models.md  task5_session.md  task6_alembic.md  task7_migration.md  task8_domain_user.md  task9_domain_batch.md
resources/: BRAINSTORM.md  WEEK6_TEAM_FINAL.md
scripts/: bootstrap.sh  check_no_hardcoded_secrets.py  measure_inference_latency.py  run_local_inference.py  seed_policies.py
tests/: BACKEND_TEST_RESULTS.md  conftest.py  test_rbac_permissions.py  test_route_protection.py
(+156 files in other folders)
